# private_notes

./: .gitignore  ISSUES.md  README.md
audio_summary_app/: ARCHITECTURE.md  Audio Summary.spec  CHANGELOG.md  CSV_EXAMPLE.md  DATA_FLOW.md  DEPLOYMENT.md  ENGINE_README.md  INSTALL.md  INSTALL_UV.md  PACKAGE_STRUCTURE.md  PHASE_2_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_OVERVIEW.md  Private Notes.spec  README.md  README_INSTALL.md  README_UPDATED.md  SETUP.md  STRUCTURED_DATA.md  USER_GUIDE.md  UV_MIGRATION.md  build_app.sh  build_pyinstaller.sh  download_parakeet.py  engine.spec  generate_test_audio.py  launch_gui.py  process_audio_file.py  pyi_rth_qt6.py  pyproject.toml  requirements.txt  setup.py  test_audio_flow.py  test_mlx_whisper.py  test_model_comparison.py  test_model_comparison_with_memory.py  test_ollama_integration.py  test_ollama_simple.py  test_parakeet_backend.py  test_parakeet_real_audio.py  (+5 more)
audio_summary_app/assets/: icon.icns
audio_summary_app/homebrew-cask/: audio-summary.rb
audio_summary_app/macos/: NOTARIZATION.md  resubmit_notary.sh  setup_notary_api.sh  sign_and_notarize.sh
audio_summary_app/macos_capture_prototype/: Info.plist  Package.swift  README.md
audio_summary_app/macos_capture_prototype/Sources/: AudioProcessor.swift  EngineClient.swift  ScreenCaptureManager.swift  main.swift
audio_summary_app/macos_gui/: Info.plist  Package.swift  README.md  STALLED.md  audio-summary.rb  build_app.sh  challenges.md  entitlements.plist  sign_and_notarize.sh
audio_summary_app/macos_gui/.build/: build.db  plugin-tools.yaml
audio_summary_app/macos_gui/.build/arm64-apple-macosx/release/: AudioSummaryGUI  description.json
audio_summary_app/macos_gui/.build/arm64-apple-macosx/release/AudioSummaryGUI.build/: AudioSummaryGUI.d  master.swiftdeps  output-file-map.json  sources
audio_summary_app/macos_gui/.build/arm64-apple-macosx/release/AudioSummaryGUI.product/: Objects.LinkFileList
audio_summary_app/macos_gui/Sources/: AppDelegate.swift  CaptureController.swift  main.swift
audio_summary_app/macos_gui/Sources/Managers/: PreferencesManager.swift  SessionManager.swift
audio_summary_app/macos_gui/Sources/Shared/: AudioProcessor.swift  Logger.swift  MicrophoneCaptureManager.swift  Models.swift  ScreenCaptureManager.swift
audio_summary_app/macos_gui/Sources/Views/: FirstRunWizard.swift  SettingsView.swift
audio_summary_app/src/audio_summary_app/: DESIGN_ScreenCaptureKit_PRD_and_TechSpec.md  __init__.py  __main__.py  audio_capture.py  config.py  demo.py  logging_utils.py  microphone_permission.py  ollama_manager.py  summarizer.py  transcriber.py  transcript_buffer.py
audio_summary_app/src/audio_summary_app/cli/: __init__.py  test_client.py
audio_summary_app/src/audio_summary_app/engine/: __init__.py  audio_utils.py  server.py  session_manager.py
audio_summary_app/src/audio_summary_app/gui/: __init__.py  app.py  first_run_wizard.py  meeting_browser.py  recording_controller.py  settings_window.py
audio_summary_app/tests/: test_gui_launch.py
audio_summary_app/tools/: generate_icon.sh
summaries/2025-11-06 Meeting 223805/: data.json  summary.txt
(+278 files in other folders)
